tests/typechecker/pass/026-for-loop-scoped.hyg
for (let mutable x = 0; x < 2; x <- x + 1) ()
