tests/typechecker/fail/027-for-loop-scoped.hyg
for (let mutable x = "evil floating point bit hack"; x<5; x <- x + 1) ()
